# JIMP

./: .travis.sh  .travis.yml  README.md
lab1/doublebasepalindromes/: ConvertToBase2.cpp  ConvertToBase2.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab10/academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h
lab11/: CMakeLists.txt
lab11/add/: AddTemplate.cpp  AddTemplate.h  CMakeLists.txt  main.cpp
lab11/binarytree/: BinaryTree.h  CMakeLists.txt  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab11/timerecorder/: CMakeLists.txt  TimeRecorder.h
lab11/vectortemplate/: CMakeLists.txt  VectorTemplate.cpp  VectorTemplate.h
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/arabicrome/: ArabicRomeConsversion.cpp  ArabicRomeConsversion.h  ArabicToRoman.h  CMakeLists.txt  RomanToArabic.h
lab12/arabictorome/: ArabicRomeConsversion.cpp  ArabicRomeConsversion.h
lab12/factorial/: CMakeLists.txt
lab12/factorial/test/: CMakeLists.txt  FactorialGoogleTest.cpp  FactorialTest.cpp  FactorialTest.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  TreeIterators.cpp  TreeIterators.h
lab12/treewalk/: CMakeLists.txt  Order.cpp  Order.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab4/: CMakeLists.txt
lab5/: CMakeLists.txt
lab6/: CMakeLists.txt
lab7/: CMakeLists.txt
lab7/geom/: CMakeLists.txt  Kolo.cpp  Kolo.h  Kula.cpp  Kula.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
lab8/: CMakeLists.txt
lab8/microdvd/: CMakeLists.txt  MovieSubtitles.cpp  MovieSubtitles.h  SubtitleError.cpp  SubtitleError.h  main.cpp
(+153 files in other folders)
